Fixing horizontal line on mobile - made sign out button smaller, increased padding-top

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -101,8 +101,10 @@ body {
       padding: 2rem 12rem; } }
 
 .btn--signout:link, .btn--signout:visited {
+  display: inline-block;
   color: #757575;
-  font-size: 1.15rem; }
+  font-size: 1.15rem;
+  margin-top: -1rem; }
 
 .form__container {
   position: relative;
@@ -192,7 +194,7 @@ body {
       transform: translate(-50%, -50%); } }
   @media (max-width: 20em) {
     .home {
-      padding-top: 2.5rem; } }
+      padding-top: 4rem; } }
   .home__text-box {
     margin: 3rem 0rem 5rem 0rem;
     text-align: center;
@@ -205,8 +207,7 @@ body {
   .home-headline {
     font-size: 2.5rem; }
     .home-headline--gradient {
-      background: linear-gradient(to top right, #7934fa 50%, #459bdb 100%);
-      background-size: 100% auto;
+      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent; }
     @media (min-width: 56.25em) {
